@@ -2,7 +2,9 @@ Beaker Changelog
 =================
 
 0.7.5 (**svn**)
-
+* Add unit tests for get_by_id function. Updated get_by_id to not result in
+  additional session files.
+* Added session.get_by_id function to retrieve a session of the given id.
 
 0.7.4 (07/09/07)
 * Fixed issue with Beaker not properly handling arguments as Pylons may pass
